--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "app"
   ],
   "author": "saqlain mujtaba",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.19.2",
+    "socket.io": "^4.7.5"
+  }
 }
